--- a/MacDown/MPHtmlPreferencesViewController.xib
+++ b/MacDown/MPHtmlPreferencesViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MPHtmlPreferencesViewController">
             <connections>
+                <outlet property="defaultPathControl" destination="bih-Hu-dSj" id="FiF-3m-GSG"/>
                 <outlet property="stylesheetFunctions" destination="IJe-cc-YKn" id="8M2-zc-OfV"/>
                 <outlet property="stylesheetSelect" destination="Wgm-Sy-7mr" id="Yis-7d-dn6"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -14,11 +15,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="61"/>
+            <rect key="frame" x="0.0" y="0.0" width="405" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ez-nk-c3q">
-                    <rect key="frame" x="18" y="23" width="32" height="17"/>
+                    <rect key="frame" x="73" y="50" width="32" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="CSS:" id="9I3-I7-HLu">
                         <font key="font" metaFont="system"/>
@@ -27,11 +28,11 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Sy-7mr">
-                    <rect key="frame" x="54" y="18" width="157" height="26"/>
+                    <rect key="frame" x="109" y="45" width="157" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="DYB-rZ-iFG" id="9Mg-zg-Kvi">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
+                        <font key="font" metaFont="menu"/>
                         <menu key="menu" title="OtherViews" id="SFn-Sa-gJY">
                             <items>
                                 <menuItem state="on" id="DYB-rZ-iFG"/>
@@ -45,7 +46,7 @@
                     </connections>
                 </popUpButton>
                 <segmentedControl horizontalHuggingPriority="300" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IJe-cc-YKn">
-                    <rect key="frame" x="214" y="19" width="118" height="24"/>
+                    <rect key="frame" x="269" y="46" width="118" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <segmentedCell key="cell" alignment="left" style="rounded" trackingMode="momentary" id="0rH-I9-Dxr">
                         <font key="font" metaFont="smallSystem"/>
@@ -58,17 +59,45 @@
                         <action selector="invokeStylesheetFunction:" target="-2" id="Sif-ZC-IKZ"/>
                     </connections>
                 </segmentedControl>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f62-wu-Z6p">
+                    <rect key="frame" x="18" y="23" width="87" height="17"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Default path:" id="e1A-Mm-svq">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <pathControl verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bih-Hu-dSj">
+                    <rect key="frame" x="108" y="19" width="280" height="22"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <pathCell key="cell" controlSize="small" selectable="YES" editable="YES" alignment="left" pathStyle="popUp" id="eXH-Mm-BJH">
+                        <font key="font" metaFont="smallSystem"/>
+                        <url key="url" string="file:///Applications/"/>
+                        <allowedTypes>
+                            <string>public.folder</string>
+                        </allowedTypes>
+                    </pathCell>
+                    <connections>
+                        <binding destination="-2" name="value" keyPath="self.preferences.htmlDefaultDirectoryUrl" id="LXh-LR-z6o"/>
+                    </connections>
+                </pathControl>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" constant="20" id="60U-Ld-RXh"/>
+                <constraint firstItem="f62-wu-Z6p" firstAttribute="top" secondItem="0ez-nk-c3q" secondAttribute="bottom" constant="10" id="7Tr-fu-TD7"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="Wgm-Sy-7mr" secondAttribute="centerY" id="Nqd-iB-6u0"/>
-                <constraint firstAttribute="bottom" secondItem="0ez-nk-c3q" secondAttribute="bottom" constant="23" id="P08-lI-UEw"/>
-                <constraint firstItem="0ez-nk-c3q" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Pg4-wx-JOm"/>
                 <constraint firstItem="Wgm-Sy-7mr" firstAttribute="leading" secondItem="0ez-nk-c3q" secondAttribute="trailing" constant="8" id="QTk-vu-G2t"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="IJe-cc-YKn" secondAttribute="centerY" id="QaR-mb-oSA"/>
+                <constraint firstItem="bih-Hu-dSj" firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" id="buC-1V-Gum"/>
+                <constraint firstItem="f62-wu-Z6p" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="fLJ-1K-5pq"/>
+                <constraint firstItem="bih-Hu-dSj" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="leading" id="fwV-Xc-Enc"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="21" id="jph-ZU-s4g"/>
                 <constraint firstItem="IJe-cc-YKn" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="trailing" constant="8" id="l5M-Nt-dYc"/>
+                <constraint firstItem="bih-Hu-dSj" firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" id="m8a-pk-jXs"/>
+                <constraint firstItem="f62-wu-Z6p" firstAttribute="trailing" secondItem="0ez-nk-c3q" secondAttribute="trailing" id="px3-Z0-OAl"/>
             </constraints>
         </customView>
+        <userDefaultsController representsSharedInstance="YES" id="QE5-Wu-kC2"/>
     </objects>
 </document>
