Implement markup completion

--- a/MacDown/MPMarkdownPreferencesViewController.xib
+++ b/MacDown/MPMarkdownPreferencesViewController.xib
@@ -75,7 +75,7 @@
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <binding destination="-2" name="value" keyPath="self.preferences.extensionStrikeThough" id="C6D-E9-X4Z"/>
+                                    <binding destination="-2" name="value" keyPath="self.preferences.extensionStrikethough" id="tWe-ZX-b8J"/>
                                 </connections>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="CCI-wC-lHw">
